# fastserve

./: .gitignore  LICENSE  README.md  greeter.proto  greeter_pb2_grpc.py  pyproject.toml
examples/: README.md  agent_aio_grpc.py  agent_connecpy.py  asyncio_greeting.py  barservice.proto  barservice_pb2.py  barservice_pb2.pyi  barservice_pb2_grpc.py  foobar.py  foobar_client.py  fooservice.proto  fooservice_pb2.py  fooservice_pb2.pyi  fooservice_pb2_grpc.py  fugaservice.proto  fugaservice_pb2.py  fugaservice_pb2.pyi  fugaservice_pb2_grpc.py  greeter.proto  greeter_client.py  greeter_client_connecpy.py  greeter_connecpy.py  greeter_connecpy_client.py  greeter_pb2.py  greeter_pb2.pyi  greeter_pb2_grpc.py  greeter_sonora_client.py  greeting.py  greeting_connecpy.py  greeting_sonora_asgi.py  greeting_using_exsiting_pb2_modules.py  greeting_wsgi.py  hoge.py  hogeservice.proto  hogeservice_pb2.py  hogeservice_pb2.pyi  hogeservice_pb2_grpc.py  olympicsagent.proto  olympicsagent_pb2.py  olympicsagent_pb2.pyi  (+6 more)
src/fastserve/: core.py
src/pydantic_rpc/: __init__.py  core.py
tests/: asyncechoservice.proto  asyncechoservice_connecpy.py  asyncechoservice_pb2.py  asyncechoservice_pb2.pyi  asyncechoservice_pb2_grpc.py  echoservice.proto  echoservice_connecpy.py  echoservice_pb2.py  echoservice_pb2_grpc.py  test_apps.py
