[project]
name = "pydantic-rpc"
version = "0.4.0"
description = "A Python library for building gRPC/ConnectRPC services with Pydantic models."
authors = [
    { name = "Yasushi Itoh" }
]
dependencies = [
    "pydantic>=2.1.1",
    "grpcio-tools>=1.56.2",
    "grpcio-reflection>=1.56.2",
    "grpcio-health-checking>=1.56.2",
    "sonora>=0.2.3",
    "connecpy>=1.2.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "hypercorn>=0.17.3",
    "pydantic-ai>=0.0.20",
]

[tool.hatch.metadata]
allow-direct-references = true
