[project]
name = "pydantic-rpc"
version = "0.6.1"
description = "A Python library for building gRPC/ConnectRPC services with Pydantic models."
authors = [
    { name = "Yasushi Itoh" }
]
dependencies = [
    "pydantic>=2.1.1",
    "grpcio-tools>=1.56.2",
    "grpcio-reflection>=1.56.2",
    "grpcio-health-checking>=1.56.2",
    "sonora>=0.2.3",
    "connecpy>=1.4.1",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
pydantic-rpc = "pydantic_rpc.core:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "hypercorn>=0.17.3",
    "pydantic-ai>=0.0.24",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.20.3",
    "ruff>=0.9.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
markers = [
    "asyncio: mark test as asyncio",
]
